<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/common_margin_12dp"
    android:layout_marginRight="@dimen/common_margin_12dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp"
        android:onClick="showBankList">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_issue_bank"/>
        <TextView
            android:id="@+id/tv_bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/im_nav_issue_bank"
            android:layout_marginEnd="@dimen/common_margin_6dp"
            android:layout_centerVertical="true"
            android:text="@string/ab_tip_select_issue_bank"/>
        <ImageView
            android:id="@+id/im_nav_issue_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_account_name"/>
        <EditText
            android:id="@+id/et_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:hint="@string/ab_tip_input_account_name"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_account_balance"/>
        <EditText
            android:id="@+id/et_account_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:hint="@string/ab_tip_input_account_balance"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_account_type"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/im_nav_account_type"
            android:layout_marginEnd="@dimen/common_margin_6dp"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_account_debit_card"/>
        <ImageView
            android:id="@+id/im_nav_account_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_remark"/>
        <EditText
            android:id="@+id/et_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:hint="@string/ab_tip_input_remark"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_12dp"
        android:onClick="createNewCard"
        android:text="@string/ab_label_save"/>
</android.widget.LinearLayout>