<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/common_margin_12dp"
    android:layout_marginRight="@dimen/common_margin_12dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp"
        android:onClick="selectTransferOutAccount">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_transfer_out_account"/>
        <TextView
            android:id="@+id/tv_transfer_out_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/im_nav_transfer_out_account"
            android:layout_marginEnd="@dimen/common_margin_6dp"
            android:layout_centerVertical="true"
            android:text="@string/ab_bank_boc"/>
        <ImageView
            android:id="@+id/im_nav_transfer_out_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp"
        android:onClick="selectTransferInAccount">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_transfer_in_account"/>
        <TextView
            android:id="@+id/tv_transfer_in_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/im_nav_transfer_in_account"
            android:layout_marginEnd="@dimen/common_margin_6dp"
            android:text="@string/ab_bank_boc"/>
        <ImageView
            android:id="@+id/im_nav_transfer_in_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_transfer_amount"/>
        <EditText
            android:id="@+id/et_transfer_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:digits="0123456789.-"
            android:hint="0.00"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_transfer_date"/>
        <TextView
            android:id="@+id/tv_transfer_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/im_nav_transfer_date"
            android:layout_marginEnd="@dimen/common_margin_6dp"
            android:layout_centerVertical="true"
            android:onClick="onDateChanged"
            android:text="xxxx-xx-xx"/>
        <ImageView
            android:id="@+id/im_nav_transfer_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_padding_12dp"
        android:paddingBottom="@dimen/common_padding_12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ab_label_remark"/>
        <EditText
            android:id="@+id/et_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:hint="@string/ab_tip_input_remark"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_12dp"
        android:onClick="saveTransferInfo"
        android:text="@string/ab_label_save"/>
</android.widget.LinearLayout>